<resources>
    <string name="app_name">day02_WanAndroid</string>
    <string name="login">登录</string>
    <string name="wanandroid">WanAndroid</string>
    <string name="collection">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于我们</string>
    <string name="home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="newArticle">新</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">用系统浏览器打开</string>
    <string name="search">热搜</string>
    <string name="general_settings">通用设置</string>
    <string name="automatic_cache">自动缓存</string>
    <string name="no_pic">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="other_settings">其他设置</string>
    <string name="feedback">意见反馈</string>
    <string name="dustbin">清除缓存</string>
    <string name="register">注册</string>
    <string name="user">请输入用户名</string>
    <string name="hintpassword">请输入密码</string>
    <string name="or">或</string>
    <string name="email">邮箱/手机号</string>
    <string name="password_register_et">输入密码</string>
    <string name="password_register_et_un">确认密码</string>
    <string name="awesome_wan_android">Awesome WanAndroid</string>
    <string name="about_content">网站内容</string>
    <string name="large_text">"Material is the metaphor.\n\n"

"A material metaphor is the unifying theory of a rationalized space and a system of motion."
"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
"technologically advanced and open to imagination and magic.\n"
"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
"flexibility of the material creates new affordances that supercede those in the physical "
"world, without breaking the rules of physics.\n"
"The fundamentals of light, surface, and movement are key to conveying how objects move, "
"interact, and exist in space and in relation to each other. Realistic lighting shows "
"seams, divides space, and indicates moving parts.\n\n"

"Bold, graphic, intentional.\n\n"

"The foundational elements of print based design typography, grids, space, scale, color, "
"and use of imagery guide visual treatments. These elements do far more than please the "
"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
"imagery, large scale typography, and intentional white space create a bold and graphic "
"interface that immerse the user in the experience.\n"
"An emphasis on user actions makes core functionality immediately apparent and provides "
"waypoints for the user.\n\n"

"Motion provides meaning.\n\n"

"Motion respects and reinforces the user as the prime mover. Primary user actions are "
"inflection points that initiate motion, transforming the whole design.\n"
"All action takes place in a single environment. Objects are presented to the user without "
"breaking the continuity of experience even as they transform and reorganize.\n"
"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

"3D world.\n\n"

"The material environment is a 3D space, which means all objects have x, y, and</string>
    <string name="net">常用网站</string>
    <string name="search_old">搜索历史</string>
    <string name="search_clear">清空</string>
    <string name="hint_text">发现更多干货</string>
    <string name="nullText">快来搜索点干货吧(*^_^*)</string>
    <string name="collection_null">暂时没有收藏数据\n\n快去收藏点喜欢的文章吧！\n\n(*^_^*)</string>

</resources>
