<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/wan_android_item"
        android:title="@string/wanandroid"
        android:icon="@drawable/menu_wanandroid_selector"
        android:checkable="true"
        android:checked="true"/>

    <item
        android:id="@+id/collection_item"
        android:title="@string/collection"
        android:icon="@drawable/menu_collection_selector"
        android:checkable="true"
        />

    <item
        android:id="@+id/settings_item"
        android:title="@string/settings"
        android:icon="@drawable/menu_setting_selector"
        android:checkable="true"
        />

    <item
        android:id="@+id/about_item"
        android:title="@string/about"
        android:icon="@drawable/menu_about_selector"
        android:checkable="true"
        />
</menu>