<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_arrow_back_break_24dp">

        <EditText
            android:id="@+id/search_text"
            android:textSize="@dimen/dp_15"
            android:drawableLeft="@mipmap/wechat_search"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_8"
            android:maxLines="1"
            android:hint="@string/hint_text"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_35"
            android:background="@drawable/search_et_selector"/>

        <Button
            android:id="@+id/search_btn"
            android:background="@drawable/search_button_shape"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dp_15"
            android:textColor="@color/text_color"
            android:text="@string/search"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_30" />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:textColor="@color/light_red"
        android:textStyle="bold"
        android:text="@string/search"
        android:textSize="@dimen/dp_20"/>

    <com.majiaxin.myview.FlowLayout
        android:id="@+id/flowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20">

    </com.majiaxin.myview.FlowLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/endColor"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:text="@string/search_old"
            android:textSize="@dimen/dp_20"/>

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toLeftOf="@id/clear"
            android:layout_centerVertical="true"
            android:src="@mipmap/clear"/>

        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_clear"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/project_tabtext_color"
            android:textSize="@dimen/dp_20"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/nullText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:gravity="center"
        android:textSize="@dimen/dp_20"
        android:text="@string/nullText"
        android:visibility="gone"/>



</LinearLayout>
