<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/register_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_20" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_100"
        android:background="@drawable/register_et_shape"
        android:drawablePadding="@dimen/dp_10"
        android:drawableStart="@drawable/mailbox"
        android:hint="@string/email"
        android:paddingStart="@dimen/dp_15"
        android:password="true"
        android:textColorHint="@color/text_color"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/register_et_shape"
        android:drawableLeft="@drawable/password_register"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/password_register_et"
        android:paddingStart="15dp"
        android:password="true"
        android:textColorHint="@color/text_color"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/CopyPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/register_et_shape"
        android:drawableLeft="@drawable/password_register"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/password_register_et_un"
        android:paddingStart="@dimen/dp_15"
        android:password="true"
        android:textColorHint="@color/text_color"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/register_bt_shape"
        android:textSize="@dimen/sp_17"
        android:textColor="@color/text_color" />

</LinearLayout>